--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141126533-1');
+</script>
         <meta charset="utf-8">
         <title>nometa</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
