--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <h1>Пожалуйста, не задавайте мета-вопросов в чате!</h1>
 
-            <p><b>Мета-вопрос</b> - это вопрос, который подразумевает другие вопросы, например:</p>
+            <p><b>Мета-вопрос</b> — это вопрос, который подразумевает другие вопросы, например:</p>
 
             <div class="dialog-line -you">
                 <div class="content">
@@ -34,7 +34,7 @@
 
             <div class="dialog-line -you">
                 <div class="content">
-                  А кто-нибудь тут проходил курс от Яндекса на курсере? Есть вопрос по анализу текста...
+                  А кто-нибудь тут проходил курс от Яндекса на курсере? Есть вопрос по анализу текста…
                 </div>
             </div>
 
@@ -44,13 +44,13 @@
                 </div>
             </div>
 
-            <p class="quote"> - «Понятно, но что плохого в этих вопросах и почему мне не стоит их задавать?»</p>
+            <p class="quote"> — «Понятно, но что плохого в этих вопросах и почему мне не стоит их задавать?»</p>
 
-            <p> - Они тратят время! И ваше, и других людей, которые пытаются вам помочь! Вы стараетесь быть вежливым, не переходя сразу к своей проблеме, как люди делают при личной встрече. Но чат — это совсем другое. Люди печатают намного медленнее, чем говорят. Вместо проявления вежливости, вы заставляете другого человека ждать, пока сформулируете вопрос, что приводит к потере производительности.</p>
+            <p>— Они тратят время! И ваше, и других людей, которые пытаются вам помочь! Вы стараетесь быть вежливым, не переходя сразу к своей проблеме, как люди делают при личной встрече. Но чат — это совсем другое. Люди печатают намного медленнее, чем говорят. Вместо проявления вежливости, вы заставляете другого человека ждать, пока сформулируете вопрос, что приводит к потере производительности.</p>
 
-            <p>То же самое относится к таким сообщениям: «Здравствуйте», «Привет. Ты здесь?», «Есть минутка?», «Пинг». Просто задавайте вопрос!</p>
+            <p>То же самое относится к таким сообщениям: <i>«Здравствуйте»</i>, <i>«Привет. Ты здесь?»</i>, <i>«Есть минутка?»</i>, <i>«Пинг»</i>. Просто задавайте вопрос!</p>
 
-            <p>К тому же, когда вы задаете вопрос сразу, открывается возможность асинхронного взаимодействия. Если собеседник недоступен, а вы уйдете до того как он вернется, он по-прежнему может ответить на вопрос, вместо того, чтобы смотреть на ваш «Привет» и думать, что же случилось.</p>
+            <p>К тому же, когда вы задаете вопрос сразу, открывается возможность асинхронного взаимодействия. Если собеседник недоступен, а вы уйдёте до того как он вернется, он по-прежнему может ответить на вопрос, вместо того, чтобы смотреть на ваш <i>«Привет»</i> и думать, что же случилось.</p>
 
             <p>Суть одной картинкой: </p>
 
