--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
 <script>
