fix: remove Russian leftovers

--- a/index_en.html
+++ b/index_en.html
@@ -28,7 +28,7 @@
 
             <div class="dialog-line -you">
                 <div class="content">
-                  Is there anyone doing X? Есть, кто разбирается в N?
+                  Is there anyone doing X?
                 </div>
             </div>
 
