--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <p class="quote"> — "I see, but what's wrong with these questions and why shouldn't I ask them?"</p>
 
     <p>— They are wasting time! Yours, and other people who are trying to help you!
-        You try to be polite without jumping straight to your problem, as people do in person.
+        You're trying to be polite by not jumping straight to your problem, as people do in person.
+
         But chat is different. People type much slower than they speak.
         Instead of being polite, you make the other person wait while you formulate the question,
         which results in a loss of productivity.</p>
