--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         You're trying to be polite by not jumping straight to your problem, as people do in person.
 
         But chat is different. People type much slower than they speak.
-        Instead of being polite, you make the other person wait while you formulate the question,
+        Instead of being polite, you're making the other person wait, whilst you formulate your question,
+
         which results in a loss of productivity.</p>
 
     <p>The same applies to messages like this:<i>"Hello"</i>,
