--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
     <p>The essence in one picture: </p>
 
-    <img src="./bad-good.png" alt="Why is a meta question so bad?">
+    <img src="./bad-good.png" alt="Why are meta questions so bad?">
+
 
 </article>
 
