--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <div class="dialog-line -you">
         <div class="content">
-            Is there anyone who understands N?
+            Is there anyone experienced in N?
+
         </div>
     </div>
 
