--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
     <div class="dialog-line -you">
         <div class="content">
-            Guys, there is a question about %framework_name%
+            Guys, I have a question about %framework_name%
+
         </div>
     </div>
 
