--- a/ua.html
+++ b/ua.html
@@ -56,7 +56,8 @@
 
     <p>— Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти! Ви намагаєтеся бути чемним, не переходячи
          відразу до своєї проблеми, як люди роблять під час особистої зустрічі. Але чат – це зовсім інше. Люди друкують набагато
-         повільніше, ніж кажуть. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки сформулюєте
+         повільніше, ніж розмовляють. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки сформулюєте
+
          питання, що призводить до втрати продуктивності.</p>
 
     <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ты тут?»</i>, <i>«Є хвилинка?»</i>,
