--- a/ua.html
+++ b/ua.html
@@ -60,7 +60,8 @@
 
          питання, що призводить до втрати продуктивності.</p>
 
-    <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ты тут?»</i>, <i>«Є хвилинка?»</i>,
+    <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ти тут?»</i>, <i>«Є хвилинка?»</i>,
+
         <i>«Пінг»</i>. Просто запитуйте!</p>
 
     <p>Якщо співрозмовник недоступний, а ви підете до того, як він повернеться,
