Add draft image translation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         const lang = navigator.language || navigator.userLanguage;
         if (lang.indexOf('uk') === 0)
-            window.location.href = 'ua.html';
+            window.location.href = 'uk.html';
         if (lang.indexOf('ru') === 0)
             window.location.href = 'ru.html';
     </script>
@@ -76,8 +76,7 @@
 
     <p>The essence in one picture: </p>
 
-    <img src="./bad-good.png" alt="Why are meta questions so bad?">
-
+    <img src="./bad-good-eng.png" alt="Why are meta questions so bad?">
 
 </article>
 
