--- a/ru.html
+++ b/ru.html
@@ -13,7 +13,7 @@
     <script>
         const lang = navigator.language || navigator.userLanguage;
         if (lang.indexOf('uk') === 0)
-            window.location.href = 'ua.html';
+            window.location.href = 'uk.html';
         if (lang.indexOf('ru') !== 0)
             window.location.href = 'index.html';
     </script>
@@ -68,7 +68,7 @@
 
     <p>Суть одной картинкой: </p>
 
-    <img src="./bad-good.png" alt="Кроха сын пришёл к отцу, и спросила кроха: 'Почему мета-вопрос - это очень плохо?'">
+    <img src="./bad-good-ru.png" alt="Кроха сын пришёл к отцу, и спросила кроха: 'Почему мета-вопрос - это очень плохо?'">
 
 </article>
 
