--- a/uk.html
+++ b/uk.html
@@ -70,7 +70,7 @@
 
     <p>Суть однією картинкою: </p>
 
-    <img src="./bad-good.png" alt="Чому мета-питання - це дуже погано?">
+    <img src="bad-good-ru.png" alt="Чому мета-питання - це дуже погано?">
 
 </article>
 
