Add languages link.
remove a redirect from language-specific pages to the main page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <link rel="stylesheet" media="screen" href="./main.css">
 <body>
 <article>
-
+    <div class="internationalisation">
+        <a href="ru.html">Русская версия</a>
+        <a href="uk.html">Українська версія</a>
+    </div>
     <h1 lang="en">Please, don't ask meta questions in chat!</h1>
 
     <p><b>Meta-question</b> - this is a question that implies other questions like:</p>
