--- a/uk.html
+++ b/uk.html
@@ -4,18 +4,13 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
+
         function gtag() {
             dataLayer.push(arguments);
         }
+
         gtag('js', new Date());
         gtag('config', 'UA-141126533-1');
-    </script>
-    <script>
-        const lang = navigator.language || navigator.userLanguage;
-        if (lang.indexOf('ru') === 0)
-            window.location.href = 'ru.html';
-        if (lang.indexOf('uk') !== 0)
-            window.location.href = 'index.html';
     </script>
     <meta charset="utf-8">
     <title>nometa</title>
@@ -23,7 +18,10 @@
     <link rel="stylesheet" media="screen" href="./main.css">
 <body>
 <article>
-
+    <div class="internationalisation">
+        <a href="index.html">English version</a>
+        <a href="ru.html">Русская версия</a>
+    </div>
     <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
 
     <p><b>Мета-запитання</b>— це запитання, котре має на увазі інші питання, наприклад:</p>
@@ -36,7 +34,7 @@
 
     <div class="dialog-line -you">
         <div class="content">
-           Є, хто розуміється на N?
+            Є, хто розуміється на N?
         </div>
     </div>
 
@@ -54,11 +52,12 @@
 
     <p class="quote"> — "Зрозуміло, але що поганого в цих питаннях і чому мені не варто їх ставити?"</p>
 
-    <p>— Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти! Ви намагаєтеся бути чемним, не переходячи
-         відразу до своєї проблеми, як люди роблять під час особистої зустрічі. Але чат – це зовсім інше. Люди друкують набагато
-         повільніше, ніж розмовляють. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки сформулюєте
-
-         питання, що призводить до втрати продуктивності.</p>
+    <p>— Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти! Ви намагаєтеся бути чемним, не
+        переходячи відразу до своєї проблеми, як люди роблять під час особистої зустрічі. Але чат – це зовсім інше. Люди
+        друкують
+        набагато повільніше, ніж розмовляють. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки
+        сформулюєте
+        питання, що призводить до втрати продуктивності.</p>
 
     <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ти тут?»</i>, <i>«Є хвилинка?»</i>,
 
