--- a/ru.html
+++ b/ru.html
@@ -4,18 +4,13 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
+
         function gtag() {
             dataLayer.push(arguments);
         }
+
         gtag('js', new Date());
         gtag('config', 'UA-141126533-1');
-    </script>
-    <script>
-        const lang = navigator.language || navigator.userLanguage;
-        if (lang.indexOf('uk') === 0)
-            window.location.href = 'uk.html';
-        if (lang.indexOf('ru') !== 0)
-            window.location.href = 'index.html';
     </script>
     <meta charset="utf-8">
     <title>nometa</title>
@@ -23,7 +18,10 @@
     <link rel="stylesheet" media="screen" href="./main.css">
 <body>
 <article>
-
+    <div class="internationalisation">
+        <a href="index.html">English version</a>
+        <a href="uk.html">Українська версія</a>
+    </div>
     <h1>Пожалуйста, не задавайте мета-вопросов в чате!</h1>
 
     <p><b>Мета-вопрос</b> — это вопрос, который подразумевает другие вопросы, например:</p>
@@ -68,7 +66,8 @@
 
     <p>Суть одной картинкой: </p>
 
-    <img src="./bad-good-ru.png" alt="Кроха сын пришёл к отцу, и спросила кроха: 'Почему мета-вопрос - это очень плохо?'">
+    <img src="./bad-good-ru.png"
+         alt="Кроха сын пришёл к отцу, и спросила кроха: 'Почему мета-вопрос - это очень плохо?'">
 
 </article>
 
@@ -83,6 +82,11 @@
                       d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
             </svg>
         </a>
+    </div>
+    <div class="row">
+        <a href="index.html">EN</a>
+        <a href="ru.html">RU</a>
+        <a href="uk.html">UK</a>
     </div>
 
 </footer>
