Add kazakh translation

--- a/uk.html
+++ b/uk.html
@@ -21,6 +21,7 @@
     <div class="internationalisation">
         <a href="index.html">English version</a>
         <a href="ru.html">Русская версия</a>
+        <a href="kk.html">Қазақша нұсқасы</a>
     </div>
     <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
 
@@ -81,6 +82,11 @@
             </svg>
 
         </a>
+    </div>
+    <div class="row">
+        <a href="index.html">EN</a>
+        <a href="ru.html">RU</a>
+        <a href="kk.html">KK</a>
     </div>
 
 </footer>
