--- a/ru.html
+++ b/ru.html
@@ -21,6 +21,7 @@
     <div class="internationalisation">
         <a href="index.html">English version</a>
         <a href="uk.html">Українська версія</a>
+        <a href="kk.html">Қазақша нұсқасы</a>
     </div>
     <h1>Пожалуйста, не задавайте мета-вопросов в чате!</h1>
 
@@ -85,8 +86,8 @@
     </div>
     <div class="row">
         <a href="index.html">EN</a>
-        <a href="ru.html">RU</a>
         <a href="uk.html">UK</a>
+        <a href="kk.html">KK</a>
     </div>
 
 </footer>
