--- a/kk.html
+++ b/kk.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="kk">
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
     <script>
@@ -25,7 +25,7 @@
     </div>
     <h1>Мета сұрақтарды қоймаңыз!</h1>
 
-    <p><b>Мета сұрақ</b> — бұл басқа сұрақтарды білдіретін сұрақ, мысалы:</p>
+    <p><b>Мета сұрақ</b> — жаңа сұрақтарды ойға келтіретін сұрақ, мысалы:</p>
 
     <div class="dialog-line -you">
         <div class="content">
@@ -35,25 +35,25 @@
 
     <div class="dialog-line -you">
         <div class="content">
-            N технологияны біреу білетін адамдар бар ма?
+            N технологиясын біреу біледі ме?
         </div>
     </div>
 
     <div class="dialog-line -you">
         <div class="content">
-            Осында курсерада яндекстың курсты өткен адамдар бар ма? Менде мәтінді талдау туралы сұрағым бар...
+            Осында курсера немесе яндекс курстарын өткен адамдар бар ма? Менде мәтінді талдау туралы сұрағым бар еді...
         </div>
     </div>
 
     <div class="dialog-line -you">
         <div class="content">
-            Менде %framework_name% туралы сұрағым бар
+            Менің %framework_name% туралы сұрағым бар
         </div>
     </div>
 
-    <p class="quote"> — "Түсінікті, бірақ не жамандық мынау сұрақтарда, неге оны маған коюға болмайды?"</p>
+    <p class="quote"> — "Түсінікті, бірақ бұл сұрақтардың зияны жоқ қой, неге оны маған коюға болмайды?"</p>
 
-    <p>— Мыңдай сұрақтар көп уақыт кетіреді! Сіздің және сізге көмектесуге тырысатын басқа адамдардың!
+    <p>— Мұндай сұрақтар көп уақыт зая жібереді! Сіздің және сізге көмектесуге тырысатын басқа адамдардың!
         Сіз жекелей кездесу сиякты сыпайы болуға тырысасыз, мәселеңізге тікелей бармай-ақ. Бірақ чат ол
         бөтен нәрсе. Адамдар сөйлегеннен әлдеқайда баяу тереді. Әдепті болудың орнына, сіз басқа адамды
         сұрақты құрастырған кезде күте аласыз, бұл өнімділікті жоғалтуға әкеледі.</p>
@@ -65,24 +65,24 @@
         және ол қайтып келгенше кетіп қалсаңыз, ол сіздің <i>«Сәлем»</i> деген сөзге қарап, не болды деп
         ойламай, сұраққа жауап береді.</p>
 
-    <p>Бiр суретпен: </p>
+    <p>Бiр суретпен айтқанда: </p>
 
     <img src="./bad-good-kk.png"
-         alt="Кішкентай ұлы әкесіне келіп сұрады: «Мета-сұрақ неге жаман?» .">
+         alt="Кішкентай ұлы әкесіне келіп сұрады: «Мета сұрақ неге жаман?» .">
 
 </article>
 
 <footer>
 
     <div class="row">
-        Inspired by&nbsp;— <a href="http://www.nohello.com">www.nohello.com</a> (автор Brandon High), линк на
+        Шабыттандырған — <a href="http://www.nohello.com">www.nohello.com</a> (авторы Брәндон Хай),
         <a href="https://github.com/leshark/nometa">
             Гитхаб
             <svg aria-hidden="true" id="octicon-icon" height="24" version="1.1" width="24">
                 <path fill-rule="evenodd"
                       d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
             </svg>
-        </a>
+        </a> сілтемесі
     </div>
     <div class="row">
         <a href="index.html">EN</a>
