Added `uzbek` language

--- a/ru.html
+++ b/ru.html
@@ -21,6 +21,7 @@
     <div class="internationalisation">
         <a href="index.html">English version</a>
         <a href="uk.html">Українська версія</a>
+        <a href="uz.html">O'zbek tili</a>
     </div>
     <h1>Пожалуйста, не задавайте мета-вопросов в чате!</h1>
 
@@ -87,6 +88,7 @@
         <a href="index.html">EN</a>
         <a href="ru.html">RU</a>
         <a href="uk.html">UK</a>
+        <a href="uz.html">UZ</a>
     </div>
 
 </footer>
