--- a/uk.html
+++ b/uk.html
@@ -21,6 +21,7 @@
     <div class="internationalisation">
         <a href="index.html">English version</a>
         <a href="ru.html">Русская версия</a>
+        <a href="uz.html">O'zbek tili</a>
     </div>
     <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
 
