--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="internationalisation">
         <a href="ru.html">Русская версия</a>
         <a href="uk.html">Українська версія</a>
+        <a href="uz.html">O'zbek tili</a>
     </div>
     <h1 lang="en">Please, don't ask meta questions in chat!</h1>
 
