--- a/uz.html
+++ b/uz.html
@@ -54,9 +54,9 @@
     <p class="quote"> — «Tushunarli, lekin bu savollarda nima yomonlik bor va nega men ularni so'ramasligim kerak?»</p>
 
     <p>— Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!
-        Siz odamlar yuzma-yuz bo'lgani kabi, muammoingizga to'g'ridan-to'g'ri murojaat qilmasdan muloyim bo'lishga
-        harakat qilasiz. Lekin suhbat butunlay boshqacha. Odamlar gapirgandan ko'ra sekinroq yozadilar. Xushmuomalalik
-        ko'rsatish o'rniga, siz boshqa odamni, savolni shakllantirishni kutishga majbur qilasiz, bu esa unumdorlikni
+        Siz odamlar bilan yuzma-yuz bo'lganingiz kabi, muammoingizga to'g'ridan-to'g'ri murojaat qilmasdan muloyim bo'lishga
+        harakat qilasiz. Ammo bu suhbat butunlay boshqacha. Odamlar gapirgandan ko'ra sekinroq yozadilar. Xushmuomalalik
+        ko'rsatish o'rniga, siz boshqa odamni savol shakllantirilishini kutishga majbur qilasiz, bu esa unumdorlikni
         yo'qotishiga olib keladi.</p>
 
     <p>Xuddi shu narsa ushbu habarlarga ham tegishli: <i>«Salom»</i>, <i>«Assalomu alaykum»</i>, <i>«Salom, kimdir bormi?»</i>,
