--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             window.location.href = 'uk.html';
         if (lang.indexOf('ru') === 0)
             window.location.href = 'ru.html';
+        if (lang.indexOf('uz') === 0)
+            window.location.href = 'uz.html';
     </script>
     <meta charset="utf-8">
     <title>nometa</title>
