Added `uzbek` language (#13)
* Added `uzbek` language

* Fixed lang

* Update uz.html

Co-authored-by: Vlad <43079632+vlade11115@users.noreply.github.com>

* Update uz.html

Co-authored-by: Ibrohim <58683257+ibrohim777775@users.noreply.github.com>

* added redirect if browser language is `uz`

Co-authored-by: Vlad <43079632+vlade11115@users.noreply.github.com>
Co-authored-by: Ibrohim <58683257+ibrohim777775@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             window.location.href = 'uk.html';
         if (lang.indexOf('ru') === 0)
             window.location.href = 'ru.html';
+        if (lang.indexOf('uz') === 0)
+            window.location.href = 'uz.html';
     </script>
     <meta charset="utf-8">
     <title>nometa</title>
@@ -29,6 +31,7 @@
     <div class="internationalisation">
         <a href="ru.html">Русская версия</a>
         <a href="uk.html">Українська версія</a>
+        <a href="uz.html">O'zbek tili</a>
     </div>
     <h1 lang="en">Please, don't ask meta questions in chat!</h1>
 
