Add redirect option to index.html (en)

--- a/uz.html
+++ b/uz.html
@@ -19,7 +19,7 @@
 <body>
 <article>
     <div class="internationalisation">
-        <a href="index.html">English version</a>
+        <a href="index.html?redirect=0">English version</a>
         <a href="uk.html">Українська версія</a>
         <a href="ru.html">Русская версия</a>
     </div>
