--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     </script>
     <script>
         const lang = navigator.language || navigator.userLanguage;
-        if (lang.indexOf('uk') === 0)
-            window.location.href = 'uk.html';
-        if (lang.indexOf('ru') === 0)
-            window.location.href = 'ru.html';
-        if (lang.indexOf('uz') === 0)
-            window.location.href = 'uz.html';
+        if (window.location.search && !window.location.search.contains("redirect=0")) {
+            if (lang.indexOf('uk') === 0)
+                window.location.href = 'uk.html';
+            if (lang.indexOf('ru') === 0)
+                window.location.href = 'ru.html';
+            if (lang.indexOf('uz') === 0)
+                window.location.href = 'uz.html';
+        };
     </script>
     <meta charset="utf-8">
     <title>nometa</title>
