--- a/uk.html
+++ b/uk.html
@@ -19,7 +19,7 @@
 <body>
 <article>
     <div class="internationalisation">
-        <a href="index.html">English version</a>
+        <a href="index.html?redirect=0">English version</a>
         <a href="ru.html">Русская версия</a>
         <a href="uz.html">O'zbek tili</a>
     </div>
