add opengraph features for all site versions

--- a/ru.html
+++ b/ru.html
@@ -13,8 +13,27 @@
         gtag('config', 'UA-141126533-1');
     </script>
     <meta charset="utf-8">
-    <title>nometa</title>
+    <!-- <title>nometa</title> -->
+    <title>Пожалуйста, не задавайте мета-вопросов в чате!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Мета-вопрос — это вопрос, который подразумевает другие вопросы. Они тратят время! И ваше, и других людей, которые пытаются вам помочь!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://nometa.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Пожалуйста, не задавайте мета-вопросов в чате!">
+    <meta property="og:description"
+        content="Мета-вопрос — это вопрос, который подразумевает другие вопросы. Они тратят время! И ваше, и других людей, которые пытаются вам помочь!">
+    <meta property="og:locale" content="ru-RU">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="nometa.xyz">
+    <meta property="twitter:url" content="http://nometa.xyz">
+    <meta name="twitter:title" content="Пожалуйста, не задавайте мета-вопросов в чате!">
+    <meta name="twitter:description"
+        content="Мета-вопрос — это вопрос, который подразумевает другие вопросы. Они тратят время! И ваше, и других людей, которые пытаются вам помочь!">
     <link rel="stylesheet" media="screen" href="./main.css">
 <body>
 <article>
