remove opengraph images

--- a/uz.html
+++ b/uz.html
@@ -26,8 +26,7 @@
     <meta property="og:title" content="Iltimos, chatda meta-savollar bermang!">
     <meta property="og:description"
         content="Meta-savol — bu boshqa savollarni nazarda tutuvchi savol. Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!">
-    <meta property="og:image" content="http://nometa.xyz/bad-good-uz.png">
-    <!-- <meta property="og:locale" content="uz"> -->
+    <meta property="og:locale" content="uz-UZ">
 
 
     <!-- Twitter Meta Tags -->
@@ -37,7 +36,6 @@
     <meta name="twitter:title" content="Iltimos, chatda meta-savollar bermang!">
     <meta name="twitter:description"
         content="Meta-savol — bu boshqa savollarni nazarda tutuvchi savol. Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!">
-    <meta name="twitter:image" content="http://nometa.xyz/bad-good-uz.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="screen" href="./main.css">
 
