--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         which results in a loss of productivity.</p>
 
     <p>The same applies to messages like this:<i>"Hello"</i>,
-        <i>"Hi. Are you here?"</i>, <i>"Do you have a minute??"</i>, <i>"Ping"</i>. Just ask your question!</p>
+        <i>"Hi. Are you here?"</i>, <i>"Do you have a minute??"</i>, <i>"Ping"</i>, <i>"Or keep calling(phoning) someone directly"</i>. Just ask your question!</p>
 
     <p>In addition, when you ask a question right away, the possibility of asynchronous interaction opens up.
         If the other person is unavailable and you leave before they return,
