Improve Kazakh translation

--- a/kk.html
+++ b/kk.html
@@ -29,7 +29,7 @@
 
     <div class="dialog-line -you">
         <div class="content">
-            Сұрақ қою болады ма?
+            Сұрақ қойсам бола ма?
         </div>
     </div>
 
@@ -41,7 +41,7 @@
 
     <div class="dialog-line -you">
         <div class="content">
-            Осында курсера немесе яндекс курстарын өткен адамдар бар ма? Менде мәтінді талдау туралы сұрағым бар еді...
+            Осында курсера немесе яндекс курстарын өткен адамдар бар ма? Мәтінді талдау туралы сұрағым бар еді...
         </div>
     </div>
 
@@ -51,24 +51,24 @@
         </div>
     </div>
 
-    <p class="quote"> — "Түсінікті, бірақ бұл сұрақтардың зияны жоқ қой, неге оны маған коюға болмайды?"</p>
+    <p class="quote"> — "Жарайды, бірақ бұл сұрақтардың еш зияны жоқ қой, неге оларды қоюға болмайды?"</p>
 
     <p>— Мұндай сұрақтар көп уақыт зая жібереді! Сіздің және сізге көмектесуге тырысатын басқа адамдардың!
-        Сіз жекелей кездесу сиякты сыпайы болуға тырысасыз, мәселеңізге тікелей бармай-ақ. Бірақ чат ол
+        Сіз мәселеге тікелей бармай, жекелей кездескендей сыпайы болуға тырысасыз. Бірақ чат – ол
         бөтен нәрсе. Адамдар сөйлегеннен әлдеқайда баяу тереді. Әдепті болудың орнына, сіз басқа адамды
         сұрақты құрастырған кезде күте аласыз, бұл өнімділікті жоғалтуға әкеледі.</p>
 
     <p>Бұл келесі хабарларға да қатысты: <i>"Сәлеметсіз бе"</i>, <i>"Сәлем. Осындасың ба?"</i>, <i>"Бір
-        минут бар ма?"</i>, <i>"Пинг"</i>. Тек сұрақ қойыңыз!</p>
+        минут бар ма?"</i>, <i>"Пинг"</i>. Сұрағыңызды қоя салыңызшы!</p>
 
-    <p>Оның үстіне сұрақ қойғанда бейсинхрондық әрекеттестік басталады. Әңгімелесуші қол жетімді болса
+    <p>Оның үстіне, сұрақ қойғанда бейсинхрондық әрекеттестік басталады. Әңгімелесуші қолжетімді болса
         және ол қайтып келгенше кетіп қалсаңыз, ол сіздің <i>«Сәлем»</i> деген сөзге қарап, не болды деп
         ойламай, сұраққа жауап береді.</p>
 
     <p>Бiр суретпен айтқанда: </p>
 
     <img src="./bad-good-kk.png"
-         alt="Кішкентай ұлы әкесіне келіп сұрады: «Мета сұрақ неге жаман?» .">
+         alt="Кішкентай ұлы әкесіне келіп сұрайды: «Мета сұрақтың несі жаман?» .">
 
 </article>
 
